<resources>
    <string name="app_name">Viet Nam Rubber Group</string>
    <string name="todo">Todo</string>
    <string name="login">Login</string>
    <string name="edt_account">Enter account</string>
    <string name="edt_pass">Enter password</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kx54gOK</string>
    <string name="nav_header_subtitle">Vũng Tàu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //menu drawer
    <string name="menu_chart">Chart</string>

    <string name="menu_send_report">Send Report</string>
    <string name="menu_send_report_1">Form Report 1</string>
    <string name="menu_send_report_2">Form Report 2</string>
    <string name="menu_send_report_3">Form Report 3</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="menu_reporting">Reports</string>
    <string name="menu_reporting_5">Reporting half year</string>
    <string name="menu_reporting_1">Reporting week</string>
    <string name="menu_reporting_2">Reporting month</string>
    <string name="menu_reporting_3">Reporting precious</string>
    <string name="menu_reporting_4">Reporting year</string>

</resources>