<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chart">

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.vietnamrubbergroup.ui.chart.ChartFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_reporting" />

    <fragment
        android:id="@+id/nav_reporting"
        android:name="com.vietnamrubbergroup.ui.reporting.ReportingFragment"

        android:label="@string/menu_reporting"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/nav_send_report"
        android:name="com.vietnamrubbergroup.ui.formReport.FormReportFragment"
        android:label="@string/menu_send_report"
        tools:layout="@layout/fragment_form_report" />
</navigation>